--- a/server/package.json
+++ b/server/package.json
@@ -9,23 +9,20 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "axios": "^0.21.4",
-    "bcrypt": "^5.1.0",
-    "cheerio": "1.0.0-rc.12",
+    "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
+    "cheerio": "^1.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.15"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.8.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^3.1.9"
   },
   "engines": {
     "node": ">=14.0.0"
-  },
-  "resolutions": {
-    "bson": "^1.1.4"
   }
 }
