--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.4",
+    "axios": "^1.13.5",
     "bootstrap": "^4.6.2",
     "popper.js": "^1.16.1",
     "react": "^16.8.0",
@@ -35,18 +35,15 @@
     "eject": "react-scripts eject"
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "production": [">0.2%", "not dead", "not op_mini all"],
+    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
   },
   "engines": {
     "node": ">=14.0.0"
+  },
+  "resolutions": {
+    "jsonpath": "^1.2.0",
+    "nth-check": "^2.0.1",
+    "postcss": "^8.4.31"
   }
 }
