--- a/server/package.json
+++ b/server/package.json
@@ -10,15 +10,15 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "axios": "^0.21.4",
+    "axios": "^1.13.5",
     "bcrypt": "^5.1.0",
     "cheerio": "1.0.0-rc.12",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.18.2",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.15"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^6.13.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
@@ -27,6 +27,7 @@
     "node": ">=14.0.0"
   },
   "resolutions": {
-    "bson": "^1.1.4"
+    "tar": "^7.5.7",
+    "semver": "^7.5.2"
   }
 }
